html: add wurst

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -36,9 +36,9 @@
           <a class="brand" href="#">PBA (Platzberegungsanlage)</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
-              <li class="active"><a href="#">Original Mode</a></li>
-              <!-- <li><a href="#about">About</a></li>
-              <li><a href="#contact">Contact</a></li> -->
+              <li class="active"><a href="index.html">Original Mode</a></li>
+              <li class="active"><a href="wurst.html">Wurstfinger Mode</a></li>
+              <!-- <li><a href="#contact">Contact</a></li> -->
             </ul>
           </div><!--/.nav-collapse -->
         </div>
