--- a/wwwroot/wurst.html
+++ b/wwwroot/wurst.html
@@ -1,137 +1,163 @@
 <!DOCTYPE html>
 <html lang="en" data-ng-app id="ng-app">
-  <head>
-    <meta charset="utf-8" />
-    <title>PBA</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+  <meta charset="utf-8" />
+  <title>PBA</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!--
     <meta name="description" content="" />
     <meta name="author" content="" />
-    -->
+  -->
 
-    <link rel="stylesheet" href="libs/bootstrap/css/bootstrap.css" />
-    <style>
-      body {
-        padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
-      }
-    </style>
-    <link rel="stylesheet" href="libs/bootstrap/css/bootstrap-responsive.css" />
-    <link rel="stylesheet" href="app/app.css" />
+  <link rel="stylesheet" href="libs/bootstrap/css/bootstrap.css" />
+  <style>
+  body {
+    padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
+  }
+  </style>
+  <link rel="stylesheet" href="libs/bootstrap/css/bootstrap-responsive.css" />
+  <link rel="stylesheet" href="app/app.css" />
 
     <!--[if lt IE 9]>
       <script src="libs/html5shiv/html5shiv.min.js"></script>
-    <![endif]-->
-  </head>
+      <![endif]-->
+    </head>
 
-  <body>
+<body>
 
-    <div class="navbar navbar-inverse navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container">
-          <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="brand" href="#">PBA (Platzberegungsanlage)</a>
-          <div class="nav-collapse collapse">
-            <ul class="nav">
-              <li class="active"><a href="index.html">Original Mode</a></li>
-              <li class="active"><a href="wurst.html">Wurstfinger Mode</a></li>
-              <!-- <li><a href="#contact">Contact</a></li> -->
-            </ul>
-          </div><!--/.nav-collapse -->
-        </div>
+  <div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="navbar-inner">
+      <div class="container">
+        <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="brand" href="#">PBA (Platzberegungsanlage)</a>
+        <div class="nav-collapse collapse">
+          <ul class="nav">
+            <li class="active"><a href="index.html">Original Mode</a></li>
+            <li class="active"><a href="wurst.html">Wurstfinger Mode</a></li>
+            <!-- <li><a href="#contact">Contact</a></li> -->
+          </ul>
+        </div><!--/.nav-collapse -->
       </div>
     </div>
+  </div>
 
-    <div class="container">
-      <h2>Active Jobs</h2>
-      <div data-ng-controller="ActiveJobsController">
-        <a href="" class="btn" data-ng-click="refresh()">refresh active list</a>
-        <ul class="unstyled">
-          <li data-ng-repeat="job in jobs">
-            <span>{{job.job_id}}</span>
-            <span>{{job.sprinkler_id}}</span>
-            <span>{{job.duration}}</span>
-            <span>{{job.start_time}}</span>
-            <span>{{job.high_priority}}</span>
-              <form data-ng-submit="removeJob(job.job_id)">
-                <input class="btn btn-large" type="submit"
-                    value="Remove" />
-              </form>
-          </li>
-        </ul>
-      </div>
-      <div data-ng-controller="JobsController">
-          <form data-ng-submit="addJob('court1')">
-            Court 1
-          <input type="text" data-ng-model="duration" size="30"
-                 placeholder="duration of sprinkling">
-          <input class="btn btn-primary btn-large" type="submit" value="add" />
-        </form>
-      </div>
-      <div data-ng-controller="JobsController">
-          <form data-ng-submit="addJob('court2')">
-            Court 2
-          <input type="text" data-ng-model="duration" size="30"
-                 placeholder="duration of sprinkling">
-          <input class="btn btn-primary btn-large" type="submit" value="add" />
-        </form>
-      </div>
-      <div data-ng-controller="JobsController">
-          <form data-ng-submit="addJob('court3')">
-            Court 3
-          <input type="text" data-ng-model="duration" size="30"
-                 placeholder="duration of sprinkling">
-          <input class="btn btn-primary btn-large" type="submit" value="add" />
-        </form>
-      </div>
-      <div data-ng-controller="JobsController">
-          <form data-ng-submit="addJob('court4')">
-            Court 4
-          <input type="text" data-ng-model="duration" size="30"
-                 placeholder="duration of sprinkling">
-          <input class="btn btn-primary btn-large" type="submit" value="add" />
-        </form>
-      </div>
-      <div data-ng-controller="JobsController">
-          <form data-ng-submit="addJob('court5')">
-            Court 5
-          <input type="text" data-ng-model="duration" size="30"
-                 placeholder="duration of sprinkling">
-          <input class="btn btn-primary btn-large" type="submit" value="add" />
-        </form>
-      </div>
-      <div data-ng-controller="JobsController">
-          <form data-ng-submit="addJob('court6')">
-            Court 6
-          <input type="text" data-ng-model="duration" size="30"
-                 placeholder="duration of sprinkling">
-          <input class="btn btn-primary btn-large" type="submit" value="add" />
-        </form>
-      </div>
-      <h2>Waiting Jobs</h2>
-      <div data-ng-controller="WaitingJobsController">
-        <a href="" class="btn" ng-click="refresh()">refresh waiting list</a>
-        <ul class="unstyled">
-          <li data-ng-repeat="job in jobs">
-            <span>{{job.job_id}}</span>
-            <span>{{job.sprinkler_id}}</span>
-            <span>{{job.duration}}</span>
-            <span>{{job.start_time}}</span>
-            <span>{{job.high_priority}}</span>
-              <form data-ng-submit="removeJob(job.job_id)">
-                <input class="btn btn-large" type="submit"
-                    value="Remove" />
-              </form>
-          </li>
-        </ul>
-      </div>
-    </div> <!-- /container -->
+  <div class="container">
+    <div class="">
 
-    <script src="libs/angular/angular.min.js"></script>
-    <script src="libs/bootstrap/js/bootstrap.min.js"></script>
-    <script src="app/jobs.js"></script>
-  </body>
+      <div class="alert alert-info">
+
+
+        <table>
+
+          <tr>
+            <td class="span4">
+              <div style="display: block; width: 80%;" type="button" class="btn btn-large btn-success disabled">
+                Platz 1
+                <br />
+                Bewässerung gesperrt
+                <br />&nbsp;
+                <br />&nbsp;
+                <!-- <div style="display: block; width: 80%;" type="button" class="btn btn-large btn-success"> -->
+                ---
+                <!-- </div> -->
+                <br />&nbsp;
+              </div>
+            </td>
+            <td class="span4">
+              <div style="display: block; width: 80%;" type="button" class="btn btn-large btn-success">
+                Platz 2
+                <br />
+                Sprinkler inaktiv
+                <br />&nbsp;
+                <br />&nbsp;
+                <!-- <div style="display: block; width: 80%;" type="button" class="btn btn-large btn-success"> -->
+                1 Minute wässern
+                <!-- </div> -->
+                <br />&nbsp;
+              </div>
+            </td>
+            <td class="span4">
+              <div style="display: block; width: 80%;" type="button" class="btn btn-large btn-info">
+                <div style="width: 5%;" type="button" class="pull-right btn btn-large btn-warning">
+                  X
+                </div>
+                Platz 3
+                <br />
+                Sprinkler aktiv für 1:58
+                <br />&nbsp;
+                <br />&nbsp;
+                <!-- <div style="display: block; width: 80%;" type="button" class="btn btn-large btn-success"> -->
+                1 Minute wässern
+                <!-- </div> -->
+                <br />&nbsp;
+              </div>
+            </td>
+          </tr>
+          <tr>
+            <td>&nbsp;
+            </td>
+          </tr>
+
+          <tr>
+            <td class="span4">
+              <div style="display: block; width: 80%;" type="button" class="btn btn-large">
+                <div style="width: 5%;" type="button" class="pull-right btn btn-large btn-warning">
+                  X
+                </div>
+                Platz 4
+                <br />
+                Sprinkler soll 2:00
+                <br />(#3 - Wartezeit: 1:58)
+                <br />&nbsp;
+                <!-- <div style="display: block; width: 80%;" type="button" class="btn btn-large btn-success"> -->
+                1 Minute wässern
+                <!-- </div> -->
+                <br />&nbsp;
+              </div>
+            </td>
+            <td class="span4">
+              <div style="display: block; width: 80%;" type="button" class="btn btn-large btn-info">
+                <div style="width: 5%;" type="button" class="pull-right btn btn-large btn-warning">
+                  X
+                </div>
+                Platz 5
+                <br />
+                Sprinkler aktiv für 2:43
+                <br />&nbsp;
+                <br />&nbsp;
+                <!-- <div style="display: block; width: 80%;" type="button" class="btn btn-large btn-success"> -->
+                1 Minute wässern
+                <!-- </div> -->
+                <br />&nbsp;
+              </div>
+            </td>
+            <td class="span4">
+              <div style="display: block; width: 80%;" type="button" class="btn btn-large btn-success">
+                Platz 6
+                <br />
+                Sprinkler inaktiv
+                <br />&nbsp;
+                <br />&nbsp;
+                <!-- <div style="display: block; width: 80%;" type="button" class="btn btn-large btn-success"> -->
+                1 Minute wässern
+                <!-- </div> -->
+                <br />&nbsp;
+              </div>
+            </td>
+          </tr>
+
+        </table>
+
+      </div>
+    </div>
+  </div>
+
+  <script src="libs/angular/angular.min.js"></script>
+  <script src="libs/bootstrap/js/bootstrap.min.js"></script>
+  <script src="app/jobs.js"></script>
+</body>
 </html>
