wurst: auto-indent heult

--- a/wwwroot/wurst.html
+++ b/wwwroot/wurst.html
@@ -18,10 +18,8 @@
   <link rel="stylesheet" href="libs/bootstrap/css/bootstrap-responsive.css" />
   <link rel="stylesheet" href="app/app.css" />
 
-    <!--[if lt IE 9]>
-      <script src="libs/html5shiv/html5shiv.min.js"></script>
-      <![endif]-->
-    </head>
+  <!--[if lt IE 9]><script src="libs/html5shiv/html5shiv.min.js"></script><![endif]-->
+</head>
 
 <body>
 
