--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -2,7 +2,7 @@
 <html lang="en" data-ng-app id="ng-app">
   <head>
     <meta charset="utf-8" />
-    <title>PBA</title>
+    <title>PBA - Original Mode</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!--
     <meta name="description" content="" />
