wurst: add/move ids/onlicks

--- a/wwwroot/wurst.html
+++ b/wwwroot/wurst.html
@@ -49,8 +49,8 @@
         <table>
 
           <tr>
-            <td class="span4" onClick="javascript:wassern(1)">
-              <div style="display: block; width: 80%;" type="button" class="btn btn-large btn-success disabled">
+            <td class="span4">
+              <div id="court1button" onClick="javascript:wassern(1)" style="display: block; width: 80%;" type="button" class="btn btn-large btn-success disabled">
                 Platz 1
                 <br />
                 Bewässerung gesperrt
@@ -62,8 +62,8 @@
                 <br />&nbsp;
               </div>
             </td>
-            <td class="span4" onClick="javascript:wassern(2)">
-              <div style="display: block; width: 80%;" type="button" class="btn btn-large btn-success">
+            <td class="span4">
+              <div id="court2button" onClick="javascript:wassern(2)" style="display: block; width: 80%;" type="button" class="btn btn-large btn-success">
                 Platz 2
                 <br />
                 Sprinkler inaktiv
@@ -75,8 +75,8 @@
                 <br />&nbsp;
               </div>
             </td>
-            <td class="span4" onClick="javascript:wassern(3)">
-              <div style="display: block; width: 80%;" type="button" class="btn btn-large btn-info">
+            <td class="span4">
+              <div id="court3button" onClick="javascript:wassern(3)" style="display: block; width: 80%;" type="button" class="btn btn-large btn-info">
                 <div style="width: 5%;" type="button" class="pull-right btn btn-large btn-warning">
                   X
                 </div>
@@ -98,8 +98,8 @@
           </tr>
 
           <tr>
-            <td class="span4" onClick="javascript:wassern(4)">
-              <div style="display: block; width: 80%;" type="button" class="btn btn-large">
+            <td class="span4">
+              <div id="court4button" onClick="javascript:wassern(4)" style="display: block; width: 80%;" type="button" class="btn btn-large">
                 <div style="width: 5%;" type="button" class="pull-right btn btn-large btn-warning">
                   X
                 </div>
@@ -114,8 +114,8 @@
                 <br />&nbsp;
               </div>
             </td>
-            <td class="span4" onClick="javascript:wassern(5)">
-              <div style="display: block; width: 80%;" type="button" class="btn btn-large btn-info">
+            <td class="span4">
+              <div id="court5button" onClick="javascript:wassern(5)" style="display: block; width: 80%;" type="button" class="btn btn-large btn-info">
                 <div style="width: 5%;" type="button" class="pull-right btn btn-large btn-warning">
                   X
                 </div>
@@ -130,8 +130,8 @@
                 <br />&nbsp;
               </div>
             </td>
-            <td class="span4" onClick="javascript:wassern(6)">
-              <div style="display: block; width: 80%;" type="button" class="btn btn-large btn-success">
+            <td class="span4">
+              <div id="court6button" onClick="javascript:wassern(6)" style="display: block; width: 80%;" type="button" class="btn btn-large btn-success">
                 Platz 6
                 <br />
                 Sprinkler inaktiv
