wurst: react on X-clicks - remove old onclicks

--- a/wwwroot/wurst.html
+++ b/wwwroot/wurst.html
@@ -50,7 +50,7 @@
 
           <tr>
             <td class="span4">
-              <div id="court1button" onClick="javascript:wassern(1)" style="display: block; width: 80%;" type="button" class="btn btn-large btn-success disabled">
+              <div id="court1button" style="display: block; width: 80%;" type="button" class="btn btn-large btn-success disabled">
                 Platz 1
                 <br />
                 Bewässerung gesperrt
@@ -63,7 +63,7 @@
               </div>
             </td>
             <td class="span4">
-              <div id="court2button" onClick="javascript:wassern(2)" style="display: block; width: 80%;" type="button" class="btn btn-large btn-success">
+              <div id="court2button" style="display: block; width: 80%;" type="button" class="btn btn-large btn-success">
                 Platz 2
                 <br />
                 Sprinkler inaktiv
@@ -99,7 +99,7 @@
 
           <tr>
             <td class="span4">
-              <div id="court4button" onClick="javascript:wassern(4)" style="display: block; width: 80%;" type="button" class="btn btn-large">
+              <div id="court4button" style="display: block; width: 80%;" type="button" class="btn btn-large">
                 <div id="court4xbutton" style="width: 5%;" type="button" class="pull-right btn btn-large btn-warning">
                   X
                 </div>
@@ -115,7 +115,7 @@
               </div>
             </td>
             <td class="span4">
-              <div id="court5button" onClick="javascript:wassern(5)" style="display: block; width: 80%;" type="button" class="btn btn-large btn-info">
+              <div id="court5button" style="display: block; width: 80%;" type="button" class="btn btn-large btn-info">
                 <div id="court5xbutton" style="width: 5%;" type="button" class="pull-right btn btn-large btn-warning">
                   X
                 </div>
@@ -131,7 +131,7 @@
               </div>
             </td>
             <td class="span4">
-              <div id="court6button" onClick="javascript:wassern(6)" style="display: block; width: 80%;" type="button" class="btn btn-large btn-success">
+              <div id="court6button" style="display: block; width: 80%;" type="button" class="btn btn-large btn-success">
                 Platz 6
                 <br />
                 Sprinkler inaktiv
