index: refresh both lists button

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -49,6 +49,7 @@
 	    <h2>Active Jobs</h2>
 	    <div data-ng-controller="ActiveJobsController">
 	      <a href="" class="btn" data-ng-click="refresh()">refresh active list</a>
+        <a href="" class="btn" onClick="javascript:location.reload(false)">refresh both lists</a>
 	      <ul class="unstyled">
 	        <li data-ng-repeat="job in jobs">
 	          <span>{{job.job_id}}</span>
@@ -114,6 +115,7 @@
 	    <h2>Waiting Jobs</h2>
 	    <div data-ng-controller="WaitingJobsController">
 	      <a href="" class="btn" ng-click="refresh()">refresh waiting list</a>
+        <a href="" class="btn" onClick="javascript:location.reload(false)">refresh both lists</a>
 	      <ul class="unstyled">
 	        <li data-ng-repeat="job in jobs">
 	          <span>{{job.job_id}}</span>
