wurst: add ids to status-divs

--- a/wwwroot/wurst.html
+++ b/wwwroot/wurst.html
@@ -52,9 +52,8 @@
             <td class="span4">
               <div id="court1button" style="display: block; width: 80%;" type="button" class="btn btn-large btn-success disabled">
                 Platz 1
-                <br />
-                Bewässerung gesperrt
                 <br />&nbsp;
+                <div id="court1status">Bewässerung gesperrt</div>
                 <br />&nbsp;
                 <!-- <div style="display: block; width: 80%;" type="button" class="btn btn-large btn-success"> -->
                 ---
@@ -65,9 +64,8 @@
             <td class="span4">
               <div id="court2button" style="display: block; width: 80%;" type="button" class="btn btn-large btn-success">
                 Platz 2
-                <br />
-                Sprinkler inaktiv
                 <br />&nbsp;
+                <div id="court2status">Bewässerung inaktiv</div>
                 <br />&nbsp;
                 <!-- <div style="display: block; width: 80%;" type="button" class="btn btn-large btn-success"> -->
                 1 Minute wässern
@@ -81,9 +79,8 @@
                   X
                 </div>
                 Platz 3
-                <br />
-                Sprinkler aktiv für 1:58
                 <br />&nbsp;
+                <div id="court3status">Sprinkler aktiv für 1:58</div>
                 <br />&nbsp;
                 <!-- <div style="display: block; width: 80%;" type="button" class="btn btn-large btn-success"> -->
                 1 Minute wässern
@@ -104,9 +101,9 @@
                   X
                 </div>
                 Platz 4
-                <br />
-                Sprinkler soll 2:00
-                <br />(#3 - Wartezeit: 1:58)
+                <br />&nbsp;
+                <div id="court4status">Sprinkler soll 2:00</div>
+                <!-- <br />(#3 - Wartezeit: 1:58) -->
                 <br />&nbsp;
                 <!-- <div style="display: block; width: 80%;" type="button" class="btn btn-large btn-success"> -->
                 1 Minute wässern
@@ -120,9 +117,8 @@
                   X
                 </div>
                 Platz 5
-                <br />
-                Sprinkler aktiv für 2:43
                 <br />&nbsp;
+                <div id="court5status">Sprinkler aktiv für 2:43</div>
                 <br />&nbsp;
                 <!-- <div style="display: block; width: 80%;" type="button" class="btn btn-large btn-success"> -->
                 1 Minute wässern
@@ -133,9 +129,8 @@
             <td class="span4">
               <div id="court6button" style="display: block; width: 80%;" type="button" class="btn btn-large btn-success">
                 Platz 6
-                <br />
-                Sprinkler inaktiv
                 <br />&nbsp;
+                <div id="court6status">Bewässerung inaktiv</div>
                 <br />&nbsp;
                 <!-- <div style="display: block; width: 80%;" type="button" class="btn btn-large btn-success"> -->
                 1 Minute wässern
