wurst: uncomment more ids

--- a/wwwroot/wurst.html
+++ b/wwwroot/wurst.html
@@ -143,13 +143,13 @@
 
   elem = document.getElementById("court1button");
   elem.addEventListener("click", wassern_id1, false);
-  // elem = document.getElementById("court1xbutton");
-  // elem.addEventListener("click", abbrechen_id1, false);
+  elem = document.getElementById("court1xbutton");
+  elem.addEventListener("click", abbrechen_id1, false);
 
   elem = document.getElementById("court2button");
   elem.addEventListener("click", wassern_id2, false);
-  // elem = document.getElementById("court2xbutton");
-  // elem.addEventListener("click", abbrechen_id2, false);
+  elem = document.getElementById("court2xbutton");
+  elem.addEventListener("click", abbrechen_id2, false);
 
   elem = document.getElementById("court3button");
   elem.addEventListener("click", wassern_id3, false);
@@ -168,8 +168,8 @@
 
   elem = document.getElementById("court6button");
   elem.addEventListener("click", wassern_id6, false);
-  // elem = document.getElementById("court6xbutton");
-  // elem.addEventListener("click", abbrechen_id6, false);
+  elem = document.getElementById("court6xbutton");
+  elem.addEventListener("click", abbrechen_id6, false);
 
   function wassern_id1(event) {
     wassern(1, event)
