wurst: add X button everywhere
to make javascript happy

--- a/wwwroot/wurst.html
+++ b/wwwroot/wurst.html
@@ -51,6 +51,9 @@
           <tr>
             <td class="span4">
               <div id="court1button" style="display: block; width: 80%;" type="button" class="btn btn-large btn-success disabled">
+                <div id="court1xbutton" style="width: 5%;" type="button" class="pull-right btn btn-large btn-warning">
+                  X
+                </div>
                 Platz 1
                 <br />&nbsp;
                 <div id="court1status">Bewässerung gesperrt</div>
@@ -61,6 +64,9 @@
             </td>
             <td class="span4">
               <div id="court2button" style="display: block; width: 80%;" type="button" class="btn btn-large btn-success">
+                <div id="court2xbutton" style="width: 5%;" type="button" class="pull-right btn btn-large btn-warning">
+                  X
+                </div>
                 Platz 2
                 <br />&nbsp;
                 <div id="court2status">Bewässerung inaktiv</div>
@@ -118,6 +124,9 @@
             </td>
             <td class="span4">
               <div id="court6button" style="display: block; width: 80%;" type="button" class="btn btn-large btn-success">
+                <div id="court6xbutton" style="width: 5%;" type="button" class="pull-right btn btn-large btn-warning">
+                  X
+                </div>
                 Platz 6
                 <br />&nbsp;
                 <div id="court6status">Bewässerung inaktiv</div>
