--- a/wwwroot/wurst.html
+++ b/wwwroot/wurst.html
@@ -254,7 +254,15 @@
       dataType: 'json',
       async: true,
       success: function(msg) {
-        document.getElementById("court" + id + "status").innerHTML = msg.status + msg.start_time;
+        if (msg.status == "inactive") {
+          document.getElementById("court" + id + "status").innerHTML = "Bewässerung inaktiv";
+        } else if (msg.status == "active") {
+          document.getElementById("court" + id + "status").innerHTML = "Sprinkler aktiv für " + Math.round(msg.remaining_time);
+        } else if (msg.status == "waiting") {
+          document.getElementById("court" + id + "status").innerHTML = "Sprinkler soll " + Math.round(msg.duration);
+        } else {
+          document.getElementById("court" + id + "status").innerHTML = "Statusanzeige kaputt: " + msg.status;
+        }
       },
       error: function(msg) {
         alert('error' + msg);
