wurst: do not disable button1

--- a/wwwroot/wurst.html
+++ b/wwwroot/wurst.html
@@ -50,7 +50,7 @@
 
           <tr>
             <td class="span4">
-              <div id="court1button" style="display: block; width: 80%;" type="button" class="btn btn-large btn-success disabled">
+              <div id="court1button" style="display: block; width: 80%;" type="button" class="btn btn-large btn-success">
                 <div id="court1xbutton" style="width: 5%;" type="button" class="pull-right btn btn-large btn-warning">
                   X
                 </div>
