--- a/wwwroot/wurst.html
+++ b/wwwroot/wurst.html
@@ -255,10 +255,13 @@
       async: true,
       success: function(msg) {
         if (msg.status == "inactive") {
+          $("#" + "court" + id + "button").removeClass("btn-info").addClass("btn-success");
           document.getElementById("court" + id + "status").innerHTML = "Bewässerung inaktiv";
         } else if (msg.status == "active") {
+          $("#" + "court" + id + "button").removeClass("btn-success").addClass("btn-info");
           document.getElementById("court" + id + "status").innerHTML = "Sprinkler aktiv für " + Math.round(msg.remaining_time);
         } else if (msg.status == "waiting") {
+          $("#" + "court" + id + "button").removeClass("btn-success").removeClass("btn-info");
           document.getElementById("court" + id + "status").innerHTML = "Sprinkler soll " + Math.round(msg.duration);
         } else {
           document.getElementById("court" + id + "status").innerHTML = "Statusanzeige kaputt: " + msg.status;
